Fix right border not showing when positioned on right edge.

--- a/henkilo-ui/src/main/static/src/components/common/henkilo/HenkiloViewContactContent.css
+++ b/henkilo-ui/src/main/static/src/components/common/henkilo/HenkiloViewContactContent.css
@@ -21,7 +21,7 @@
 
 .contact-content-add-new {
     border: 1px dashed #d5d5d5;
-    width: 100%;
+    width: 95%;
     height: 324px;
     cursor: pointer;
     padding: 5px 0;
